[package]
name = "webproof"
version = "0.1.0"
edition = "2021"

[lib]
name = "webproof"
path = "src/lib.rs"

[[bin]]
name = "webproof"
path = "src/main.rs"

[dependencies]
ed25519-dalek = "1.0.1"
rand = "0.7.3"
chrono = "0.4"
sha2 = "0.9.5"
hex = "0.4.3"
rustls = "0.20"
webpki = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
webpki-roots = "0.22.0"




