[package]
name = "webproof"
version = "0.1.0"
edition = "2021"

[lib]
name = "webproof"
path = "src/lib.rs"

[[bin]]
name = "webproof"
path = "src/main.rs"

[dependencies]
ed25519-dalek = "1.0.1"
ring = "0.16.20"
base64 = "0.21.0"
chrono = "0.4.19"
async-trait = "0.1.51"
tokio = { version = "1.0", features = ["full", "macros"] }
rand = "0.8.5"
hex = "0.4.3"
rustls = "0.20"
webpki = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
webpki-roots = "0.22.0"
sha2 = "0.9.5"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "macros"] }







