[package]
name = "webproof"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "webproof"
path = "src/lib.rs"

[[example]]
name = "ethereum_price"
path = "examples/ethereum_price.rs"


[dependencies]
rustls = "0.21"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.68"
reqwest = { version = "0.11.18", features = ["json", "rustls-tls"] }
serde_json = "1.0.96"
webpki-roots = "0.25"
ring = "0.16.20"
base64 = "0.21.0"
chrono = "0.4.24"
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.28.0", features = ["full", "test-util"] }







